--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<label for="password">Password:</label>
 		<input type="password" id="password" name="password" required>
 
-		<input type="submit" value="Login" onclick="login()">
-		<a href="home.html">Home</a>
+		<input type="submit" value="Login" onclick="login(event)">
 
 
 	</form>
