--- a/home.html
+++ b/home.html
@@ -1,15 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home Page</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>Web Calculator</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    .calculator {
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 20px;
+      max-width: 400px;
+      margin: 50px auto;
+      box-shadow: 0px 0px 10px #ccc;
+      background-color: #fff;
+    }
+
+    h1 {
+      text-align: center;
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+
+    input[type="number"] {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+      margin-bottom: 20px;
+    }
+
+    input[type="submit"] {
+      background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #3e8e41;
+    }
+
+    .result {
+      font-size: 24px;
+      text-align: center;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-	<h1>Welcome to the Home Page</h1>
+  <div class="calculator">
+    <h1>Web Calculator</h1>
+    <form>
+      <label for="num1">Number 1:</label>
+      <input type="number" id="num1" name="num1" required>
+      <label for="num2">Number 2:</label>
+      <input type="number" id="num2" name="num2" required>
+      <label for="operator">Operator:</label>
+      <select id="operator" name="operator">
+        <option value="+">+</option>
+        <option value="-">-</option>
+        <option value="*">*</option>
+        <option value="/">/</option>
+      </select>
+      <input type="submit" value="Calculate" onclick="calculate()">
+    </form>
+    <div class="result" id="result"></div>
+  </div>
 
-	<p>You have successfully logged in.</p>
-
+  <script src="script.js"></script>
 </body>
 </html>
