--- a/home.html
+++ b/home.html
@@ -76,6 +76,6 @@
     <div class="result" id="result"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="script2.js"></script>
 </body>
 </html>
