--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 <body>
   <div class="calculator">
     <h1>Web Calculator</h1>
-    <form>
+    <form id="calculator-form">
       <label for="num1">Number 1:</label>
       <input type="number" id="num1" name="num1" required>
       <label for="num2">Number 2:</label>
@@ -71,11 +71,11 @@
         <option value="*">*</option>
         <option value="/">/</option>
       </select>
-      <input type="submit" value="Calculate" onclick="calculate()">
+      <input type="submit" value="Calculate">
     </form>
     <div class="result" id="result"></div>
   </div>
 
-  <script src="script2.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
