--- a/index.html
+++ b/index.html
@@ -1,23 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login Page</title>
+  <title>Login Page</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+      font-family: Arial, sans-serif;
+    }
+
+    form {
+      background-color: #fff;
+      border-radius: 5px;
+      box-shadow: 0px 0px 10px #ccc;
+      max-width: 400px;
+      margin: 50px auto;
+      padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      margin-top: 0;
+    }
+
+    label {
+      display: block;
+      margin-top: 10px;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+      margin-bottom: 20px;
+    }
+
+    input[type="submit"] {
+      background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #3e8e41;
+    }
+  </style>
 </head>
 <body>
-	<form>
-		<h1>Login</h1>
-		<label for="username">Username:</label>
-		<input type="text" id="username" name="username" required>
+  <form>
+    <h1>Login</h1>
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required>
 
-		<label for="password">Password:</label>
-		<input type="password" id="password" name="password" required>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required>
 
-		<input type="submit" value="Login" onclick="login(event)">
+    <input type="submit" value="Login" onclick="login(event)">
+  </form>
 
-
-	</form>
-
-	<script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
