--- a/index.html
+++ b/index.html
@@ -67,5 +67,16 @@
   </form>
 
   <script src="script.js"></script>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2VC8DER89"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q2VC8DER89');
+  
+</script>
 </body>
 </html>
